--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>5 JS Mini Projects</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Blurry Loading</title>
   </head>
-  <body></body>
+  <body>
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
+    <script src="script.js"></script>
+  </body>
 </html>
